# mardoc

./: Cargo.toml
assets/: arm.blend  arm.blend1  arm.glb  arm.gltf  body.blend  body.blend1  body.glb  building1.blend  building1.blend1  building1.glb  cleaver.blend  cleaver.blend1  dead.blend  dead.blend1  dead.glb  gun.blend  gun.blend1  gun.glb  hand.blend  hand.blend1  hand.glb  head.blend  head.blend1  head.glb  home.blend  home.blend1  home.glb  leg.blend  leg.blend1  leg.glb  plinth.blend  plinth.blend1  plinth.glb  serhead.blend  serhead.glb  tree.blend  tree.blend1  tree.glb
src/: bob.rs  camera.rs  game.rs  hotbar.rs  inventory.rs  main.rs  nim.rs  person.rs  player.rs  town.rs  townsfolk.rs  ui.rs
src/hello/: mod.rs
src/terrain/: mod.rs
