[package]
name = "mardoc"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0-rc.3"
#bevy-inspector-egui = { git = "https://github.com/Vrixyz/bevy-inspector-egui", branch = "bevy_0.15" }
noise = "0.9.0"

[patch.crates-io]
#bevy_egui = { git = "https://github.com/Vrixyz/bevy-egui", branch = "bevy_main" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
